<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="18dp"
        android:autofillHints="Name"
        android:hint="@string/Name"
        android:inputType="text"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/address"
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="66dp"
        android:autofillHints="Address"
        android:hint="@string/Address"
        android:inputType="text"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="211dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="116dp"
        android:autofillHints="PhoneNumber"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/save"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="269dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Save"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/DeleteData"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="163dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/DeleteData" />


    <Button
        android:id="@+id/UpdateData"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="218dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/UpdateData"
        android:textAllCaps="true" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:textColor="@color/textColor"/>


</RelativeLayout>